--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -238,7 +238,7 @@ aside:
       link: https://github.com/MingTechPro
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: This is my Blog.
   card_recent_post:
     enable: true
     limit: 5 # 如果设置为0，将显示所有
@@ -366,7 +366,7 @@ katex:
 
 # Algolia 搜索
 algolia_search:
-  enable: false
+  enable: true
   hits:
     per_page: 6
 
@@ -665,7 +665,7 @@ mask:
   footer: true
 
 # 右下角按钮距离底部的距离/默认单位为px
-rightside_bottom:
+rightside_bottom: 180px
 
 # 开启网页进入效果
 enter_transitions: true
@@ -783,13 +783,13 @@ subtitle:
 
 # Loading Animation (加载动画)
 preloader:
-  enable: false
+  enable: true
   # source
   # 1. fullpage加载
   # 2. pace (进度条)
-  source: 1
+  source: 2
   # pace 题目，主题 (see https://codebyzach.github.io/pace/)
-  pace_css_url:
+  pace_css_url: https://cdn.jsdelivr.net/gh/MingTechPro/js-api-script-toolbox@main/barber-shop.css
 
 # wordcount (字数统计)
 # see https://butterfly.js.org/posts/ceeb73f/#字數統計
@@ -890,7 +890,7 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: false
+  enable: true
   field: site # site/post
   placeholder:
   blur: false
