--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,7 @@ theme: butterfly # 设置当前主题名称。值为false时禁用主题
 deploy:
   type: ""
 
+# 代码程序图设置
 kramed:
   gfm: true
   pedantic: false
@@ -103,7 +104,9 @@ kramed:
   smartLists: true
   smartypants: true
 
-algolia:
-  applicationID: '8CY9BECZSU'
-  apiKey: '30889e47c99a2c06e72db0fb022ab41a'
-  indexName: 'mingtechpro'
+# 本地搜索设置
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
