--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -54,7 +54,7 @@ avatar:
 disable_top_img: false
 
 # 首页的横幅图片
-index_img: 
+index_img:
 
 # 如果页面的横幅没有设置，它将显示顶部的图片
 default_top_img: https://cdn.jsdelivr.net/gh/MingTechPro/drawing-bed/img_url/202404272114713.jpg
@@ -557,7 +557,7 @@ crisp:
 messenger:
   enable: false
   pageID:
-  lang: zh_TW # Language en_US/zh_CN/zh_TW and so on | 语言 英文/简体中文/繁体中文 等等
+  lang: zh_CN # Language en_US/zh_CN/zh_TW and so on | 语言 英文/简体中文/繁体中文 等等
 
 # 分析
 # --------------------------------------
@@ -601,8 +601,8 @@ google_adsense:
 site_verification:
   # - name: google-site-verification 谷歌网站验证
   #   content: xxxxxx
-  # - name: baidu-site-verification 百度网站验证
-  #   content: xxxxxxx
+  - name: baidu-site-verification # 百度网站验证
+    content: codeva-bwmB3nfeCE
 
 # Beautify/Effect (美化/效果)
 # --------------------------------------
@@ -611,22 +611,22 @@ site_verification:
 # 颜色值必须被双引号包裹，就像"#000"而不是#000。否则将会在构建的时候报错！
 
 theme_color:
-  enable: true
-  main: "#49B1F5"
-  paginator: "#00c4b6"
-  button_hover: "#FF7242"
-  text_selection: "#00c4b6"
-  link_color: "#99a9bf"
-  meta_color: "#858585"
-  hr_color: "#A4D8FA"
-  code_foreground: "#F47466"
-  code_background: "rgba(27, 31, 35, .05)"
-  toc_color: "#00c4b6"
-  blockquote_padding_color: "#49b1f5"
-  blockquote_background_color: "#49b1f5"
-  scrollbar_color: "#49b1f5"
-  meta_theme_color_light: "ffffff"
-  meta_theme_color_dark: "#0d0d0d"
+  enable: true # 是否启用主题颜色，true 表示启用，false 表示禁用
+  main: "#49B1F5" # 主要主题颜色，用于页面背景、按钮等元素
+  paginator: "#00c4b6" # 分页器颜色，用于分页按钮等
+  button_hover: "#FF7242" # 按钮悬停颜色，鼠标悬停时按钮的颜色
+  text_selection: "#00c4b6" # 文本选择颜色，用于用户选中文本时的背景颜色
+  link_color: "#99a9bf" # 链接颜色，用于超链接文本的颜色
+  meta_color: "#858585" # 元数据颜色，用于日期、作者等元数据的颜色
+  hr_color: "#A4D8FA" # 分隔线颜色，用于水平分隔线的颜色
+  code_foreground: "#F47466" # 代码前景色，用于代码文本的前景颜色
+  code_background: "rgba(27, 31, 35, .05)" # 代码背景色，用于代码块的背景颜色
+  toc_color: "#00c4b6" # 目录颜色，用于文档目录的颜色
+  blockquote_padding_color: "#49b1f5" # 引用块填充颜色，用于引用块的填充颜色
+  blockquote_background_color: "#49b1f5" # 引用块背景颜色，用于引用块的背景颜色
+  scrollbar_color: "#49b1f5" # 滚动条颜色，用于滚动条的颜色
+  meta_theme_color_light: "ffffff" # 元主题颜色（明亮模式），用于明亮模式下的元数据颜色
+  meta_theme_color_dark: "#0d0d0d" # 元主题颜色（暗黑模式），用于暗黑模式下的元数据颜色
 
 # 首页的顶部图片设置
 # 默认top_img全屏，site_info在中间
@@ -694,7 +694,7 @@ canvas_ribbon:
 # Fluttering Ribbon (动态彩带)
 canvas_fluttering_ribbon:
   enable: true # 是否开启
-  mobile: true # false 手机端不显示 true 手机端显示
+  mobile: false # false 手机端不显示 true 手机端显示
 
 # canvas_nest
 # https://github.com/hustcc/canvas-nest.js
@@ -775,11 +775,10 @@ subtitle:
   # source: 2  调用一句网（简体） http://yijuzhan.com/
   # source: 3  调用今日诗词（简体） https://www.jinrishici.com/
   # subtitle 会先显示 source , 再显示 sub 的内容
-  source: false
+  source: 3
   # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
   sub:
     - 人性的背后是白云苍狗  愿你我都是生活的高手
-    - 用代码表达言语的魅力  用代码书写山河的壮丽
 
 # Loading Animation (加载动画)
 preloader:
@@ -872,7 +871,7 @@ aplayerInject:
 # position 彈窗位置
 # 可選 top-left / top-center / top-right / bottom-left / bottom-center / bottom-right
 snackbar:
-  enable: false
+  enable: true
   position: bottom-left
   bg_light: "#49b1f5" # The background color of Toast Notification in light mode
   bg_dark: "#1f1f1f" # The background color of Toast Notification in dark mode
@@ -927,8 +926,7 @@ css_prefix: true
 inject:
   head:
     # - <link rel="stylesheet" href="/xxx.css">
-    # 百度站长验证
-    - <meta name="baidu-site-verification" content="codeva-bwmB3nfeCE" />
+
   bottom:
     # - <script src="xxxx"></script>
 
