--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -47,7 +47,7 @@ favicon: /img/favicon.png
 
 # Avatar (头像)
 avatar:
-  img: https://cdn.jsdelivr.net/gh/MingTechPro/drawing-bed/img_url/202404272112048.jpg
+  img: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/img_url/202404272112048.jpg
   effect: false # true：头像会一直转圈
 
 # 禁用所有横幅图像
@@ -57,7 +57,7 @@ disable_top_img: false
 index_img:
 
 # 如果页面的横幅没有设置，它将显示顶部的图片
-default_top_img: https://cdn.jsdelivr.net/gh/MingTechPro/drawing-bed/img_url/202404272114713.jpg
+default_top_img: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/img_url/202404272114713.jpg
 
 # 存档页面的横幅图像
 archive_img:
@@ -90,7 +90,7 @@ cover:
   position: both
   # 当未设置封面时，显示默认封面 (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    - https://cdn.jsdelivr.net/gh/MingTechPro/drawing-bed/img_url/202404272114713.jpg
+    - https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/img_url/202404272114713.jpg
 
 # 替换损坏的图像 (替換無法顯示的圖片)
 error_img:
