--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -17,7 +17,7 @@
 
     - name: js-api-script-toolbox
       link: https://github.com/MingTechPro/js-api-script-toolbox
-      avatar: https://raw.githubusercontent.com/jerryc127/CDN/master/img/butterfly-github-avatar.png
+      avatar: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/avatar-bg_url/202405060150773.png
       descr: JavaScript-api-脚本 工具库
 
 - class_name: DOS 私人服务
@@ -25,7 +25,7 @@
   link_list:
     - name: GitHub
       link: https://github.com/
-      avatar: https://raw.githubusercontent.com/jerryc127/CDN/master/img/butterfly-github-avatar.png
+      avatar: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/avatar-bg_url/202405060150773.png
       descr: 全球最大的代码仓库
 
     - name: Leancloud
