--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -776,10 +776,11 @@ subtitle:
   # source: 2  调用一句网（简体） http://yijuzhan.com/
   # source: 3  调用今日诗词（简体） https://www.jinrishici.com/
   # subtitle 会先显示 source , 再显示 sub 的内容
-  source: 3
+  source: false
   # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
   sub:
-    - 人性的背后是白云苍狗  愿你我都是生活的高手
+    - 人性的背后是白云苍狗 · 愿你我都是生活的高手
+    - 过去无可挽回 · 未来可以改变
 
 # Loading Animation (加载动画)
 preloader:
