--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -928,6 +928,8 @@ css_prefix: true
 inject:
   head:
     # - <link rel="stylesheet" href="/xxx.css">
+    # 微软访问监控
+    - <script type="text/javascript">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window, document, "clarity", "script", "m8d4dvwgzi");</script>
     # 提前与第三方域名建立连接
     - <link rel="preconnect" href="https://jsd.012700.xyz">
     # 博客文章统计图
