--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -50,3 +50,8 @@
       link: https://mingtechpro.github.io/ChenPeiming52001.github.io/
       avatar:
       descr: ChenPeiming个人博客
+
+    - name: 小玉石的博客
+      link: //bl-sun.github.io
+      avatar: //bl-sun.github.io/-/img/avatar.jpeg
+      descr: 爱生活，爱自己
