优化书签、添加摄影日记 、添加壁纸墙

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -15,6 +15,8 @@ menu:
   分类: /categories/ || fas fa-folder-open
   清单||fa fa-heartbeat:
     数据图表: /datachart/ || fas fa-chart-pie
+    摄影日记: /photographicDiary/ || fas fa-camera
+    壁纸墙: /wallpaper/ || fas fa-image
     书签: /bookmark/ || fas fa-book
   友链: /link/ || fas fa-link
   关于: /about/ || fas fa-heart
