--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -17,7 +17,7 @@
 
     - name: js-api-script-toolbox
       link: https://github.com/MingTechPro/js-api-script-toolbox
-      avatar: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/avatar-bg_url/202405060150773.png
+      avatar: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/avatar-bg_url/202405142242021.svg
       descr: JavaScript-api-脚本 工具库
 
 - class_name: DOS 私人服务
