--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -46,7 +46,7 @@ social:
 # --------------------------------------
 
 # Favicon（网站图标）
-favicon: /img/favicon.png
+favicon: /img/favicon.svg
 
 # Avatar (头像)
 avatar:
