修改评论配置

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -477,6 +477,7 @@ waline:
     locale:
       placeholder: |
         💬欢迎评论~
+        💌本站已启用邮箱通知功能哦，若您想要接收通知，那么请正确输入邮箱以及昵称哟~
         👾本站已开启QQ邮箱自动设置QQ头像功能~
         🔏本站已启用Akismet反垃圾评论哟~
         🚀评论和回复支持标准M↓
