--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -62,7 +62,7 @@
       descr: 一款从 Valine 衍生的带后端评论系统
 
     - name: ChenPeiming
-      link: https://mingtechpro.github.io/ChenPeiming52001.github.io/
+      link: https://chenpeiming.mingtechpro.top/
       avatar: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/avatar-bg_url/202405160046279.svg
       descr: ChenPeiming个人博客
 
