--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -75,3 +75,8 @@
       link: https://blog.rickyxrc.cc/
       avatar: https://cdn.rickyxrc.cc/head/512.png
       descr: 我是rickyxrc，为营造更好的网络环境和一个更好的明天而不懈奋斗。
+
+    - name: Zayden の树屋
+      link: https://lures2019.github.io/
+      avatar: https://cdn.jsdelivr.net/gh/lures2019/Typora_image_CDN/PicGo/202408291909996.png
+      descr: 路是走出来的，少说多做！
